<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bluebook</string>

    <string name="status_last">Backup Summary </string>
    <string name="status_default_sync_date">Not yet backed up</string>
    <string name="status_on">, on</string>
    <string name="status_sent">Updates Sent: </string>
    <string name="status_received">Updates Received: </string>
    <string name="status_errors">Errors: </string>
    <string name="status">Status</string>

    <!-- Menu strings -->
    <string name="menu_settings">Settings</string>
    <string name="menu_sync_log">Summary</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_reset_sync_log">Reset Summary</string>
    <string name="menu_terms_and_conditions">Terms and Conditions</string>

    <!-- Status strings -->
    <string name="status_starting">Starting</string>
    <string name="status_resuming">Resuming</string>
    <string name="status_suspending">Suspending</string>
    <string name="status_initializing">Initializing</string>
    <string name="status_suspended">Suspended</string>
    <string name="status_temp_problem">Temporary Problem</string>
    <string name="status_press_resume">Press Resume to Continue</string>
    <string name="status_success">Success</string>
    <string name="status_failed">Failed</string>
    <string name="status_check_settings">Check Settings</string>
    <string name="status_operation_failed">Operation Failed</string>
    <string name="status_operation_conflict">Operation Conflict</string>
    <string name="status_no_updates">No Updates</string>
    <string name="status_incomplete">Incomplete</string>
    <string name="status_aborted_by_user">Aborted By User</string>
    <string name="status_connection_error">Connection Error</string>
    <string name="status_credentials_error">Wrong username and/or password.  Try again or see Help for more info.</string>
    <string name="status_device_full">Device Full</string>
    <string name="status_sync_complete">Backup finished</string>
    <string name="status_receiving_updates">Receiving updates</string>
    <string name="status_checking_contacts">Checking Contacts</string>
    <string name="status_sending_updates">Sending Updates</string>
    <string name="status_loading_contacts">Loading Contacts</string>
    <string name="status_deleting_contact">Deleting Contact</string>

    <!-- Terms and Conditions dialog -->
    <string name="accept"><B>Accept</B></string>
    <string name="decline">Decline</string>

    <!-- Login Dialog -->
    <string name="enter_account_details">Enter your account details:</string>
    <string name="empty_credentials_error">Please make sure username and password are not empty</string>
    <string name="registered_account">You need to have a registered Bluebook account to use this app.  If you don\'t have one visit http://o2.co.uk/bluebook to set one up.</string>
    <string name="agree_terms_and_conditions">By using this service you are agreeing to the Bluebook terms and conditions.  To review them please select Terms in the menu.</string>
    <string name="check_credentials_text">We\'re about to check your username and password and backup your contacts.  We\'ll also restore any contacts you already have on Bluebook to your phone.\n\nClick Continue to start, or Cancel to do it later</string>

    <!-- Post Sync Dialog -->
    <string name="post_sync_msg_text">This is the Post Backup configurable message text</string>

    <!-- Pre Sync Dialog -->
    <string name="pre_sync_msg_text">Are you sure you want to backup?</string>

    <!-- Home Screen / MainActivity Strings -->

    <!-- Button Strings -->
    <string name="suspend">Suspend</string>
    <string name="resume">Resume</string>
    <string name="sync">Backup</string>
    <string name="sign_in">Sign in</string>
    <string name="ok">OK</string>
    <string name="cont">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="abort">Abort</string>
    <string name="syncing">Backing up...</string>
    <string name="resuming">Resuming...</string>
    <string name="suspending">Suspending...</string>
    <string name="cancelling">Cancelling...</string>

    <!-- General Strings -->
    <string name="heading_placeholder">     </string>
    <string name="details_placeholder">     </string>
    <string name="syncing_contacts">Backing up</string>
    <string name="sync_in_progress">Backup in progress:</string>
    <string name="sis_received">Online backup request received.  Click here to backup.</string>
    <string name="cis_received">Contacts have changed on the device.  Click here to backup</string>
    <string name="cis_no_password">Click here to enter your credentials to backup</string>

    <!-- Sync Log Strings -->
    <string name="last_sync">Last Backup</string>
    <string name="contacts">Contacts</string>
    <string name="phone">Phone</string>
    <string name="server">Server</string>
    <string name="added">Added</string>
    <string name="edited">Edited</string>
    <string name="deleted">Deleted</string>
    <string name="error">In Error</string>
    <string name="conflict">In Conflict</string>
    <string name="default_count">0</string>
    <string name="to_date">To Date</string>
    <string name="times_start">You have backed up</string>
    <string name="times_end">time(s) since last reset</string>

    <string name="sync_log_header">Backup Log</string>
    <string name="last_sync_counters"></string>

    <string name="total_sync_counters_header">Total To Date</string>
    <string name="total_sync_counters"></string>
    

    <string name="last_sync_phone_errors_header">Phone Errors</string>
    <string name="last_sync_phone_errors"></string>

    <string name="last_sync_server_errors_header">Server Errors</string>
    <string name="last_sync_server_errors"></string>

    <!-- Preference Strings (Categories) -->
    <string name="gen_settings">General Settings</string>
    <string name="sync_options">Backup Options</string>
    <string name="contact_options">Advanced Options</string>

    <!-- Preference Strings (Account Details PreferenceScreen) -->
    <string name="acc_details">Account Details</string>
    <string name="acc_details_summary">Set account username and password</string>
    <string name="acc_username">Username</string>
    <string name="acc_password">Password</string>
    <string name="acc_rem_password">Remember Password</string>
    <string name="acc_server_hostname">Server Hostname</string>
    <string name="acc_server_port">Server Port</string>
    <string name="acc_use_ssl">Connect using SSL</string>

    <!-- Preference Strings (Auto Sync PreferenceScreen) -->
    <string name="auto_sync">Automatic Backup</string>
    <string name="auto_sync_summary">Select automatic backup settings</string>
    <string name="auto_sync_settings">Automatic backup Settings</string>
    <string name="auto_sync_online">Online backup Requests</string>
    <string name="auto_sync_online_summary">Enable Online backup Requests</string>
    <string name="auto_sync_changes">Auto Backup Changes</string>
    <string name="auto_sync_changes_summary">Enable auto backup when contact changes are detected</string>
    <string name="auto_sync_detect">Detect Changes</string>
    <string name="auto_sync_detect_summary">Minimum number of contacts to backup</string>

    <!-- Preference Strings (Sync Mode settings) -->
    <string name="sync_mode">Whilst In UK</string>
    <string name="sync_mode_summary">Select backup settings whilst in UK</string>
    <string-array name="sync_mode_options">
       <item>Automatic</item>
       <item>Remind me</item>
       <item>Never backup</item>
    </string-array>
    <string-array name="sync_mode_options_values">
       <item>2</item>
       <item>1</item>
       <item>0</item>
    </string-array>

    <!-- Preference Strings (Roaming Mode settings) -->
    <string name="roam_mode">Roaming mode</string>
    <string name="roam_mode_summary">Select backup settings when roaming</string>

    <!-- Preference String (Wifi Mode settings) -->
    <string name="wifi_mode">Wifi Mode</string>
    <string name="wifi_mode_summary">Select backup settings when using WiFi</string>

    <!-- Preference Strings (Conflict Resolution) -->
    <string name="conflict_res">Conflict Resolution</string>
    <string name="conflict_res_summary">Select how to resolve backup conflicts</string>
    <string-array name="conflict_res_options">
        <item>Phone overwrites server</item>
        <item>Server overwrites phone</item>
        <item>Create duplicates</item>
        <item>Ignore conflicts</item>
    </string-array>
        <string-array name="conflict_res_options_values">
        <item>4</item>
        <item>2</item>
        <item>8</item>
        <item>16</item>
    </string-array>

    <!-- AboutDialog Strings -->
    <string name="copyright">©2011 Telefónica UK Limited.\n\n http://www.o2.co.uk/bluebook</string>
    <string name="version">Version</string>
    <string name="build">, build</string>

    <!-- SyncProgressDialog Strings -->
    <string name="progess_title">Backup in progress:</string>

    <!--  Main Dialog Strings -->
    <string name="sync_summary">Backup Summary</string>
    <string name="sync_date">Not yet backed up</string>

    <!-- General Strings -->
    <string name="server_alert">Server initiated backup...</string>
    <string name="downloading_resources">Downloading Resources...</string>
    <string name="download_complete">Download Complete</string>
    <string name="loading_resources">Loading Resources from Assets</string>
    <string name="error_downloading">Error downloading resource</string>
    <string name="error_locating">Error locating deployment SMS</string>
    <string name="contacts_changed"> contacts changed on device. Backing up...</string>
    <string name="minimum_error">Error: Minimum number of contacts to backup must be 1 or more</string>
</resources>
